--- a/public/style2/style.css
+++ b/public/style2/style.css
@@ -22,12 +22,29 @@ body {
     font-size: 20px;
 }
 
+figure {
+    width: 110px;
+    height: 100px;
+}
+h1 {
+    color: green;
+    font-size: 40px;
+}
 
-header div figure img {    
+p {
+    font-size: 18px;
+    letter-spacing: 1.5px;
+}
+
+header div figure img {
     position: absolute;
     top: 0;
     right: 0;
     transform: rotate(-15deg);
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    display: block;
 }
 
 .content section {
@@ -38,7 +55,6 @@ header div figure img {
     grid-template-rows: repeat(2, 1fr);
 }
 
-
 /* About section */
 header div hgroup h2,
 #about h3 {
@@ -46,8 +62,10 @@ header div hgroup h2,
 }
 
 section h3 {
-    grid-row: 1/3;
+    grid-row: 1/4;
     border-right: 1px solid gray;
+    color: green;
+    font-size: 25px;
 }
 
 .experience {
@@ -170,5 +188,5 @@ div[data-skill="7"]::before {
 }
 
 #contact {
-    display: none;  
+    display: none;
 }
